# SparseProcessing

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  bell.cpp  bell.hpp  convertFormats.cpp  convertFormats.hpp  coo.cpp  coo.hpp  csc.cpp  csc.hpp  csr.cpp  csr.hpp  format.hpp  main.cpp  mtxFeatures.cpp  mtxFeatures.hpp  mtxReader.cpp  mtxReader.hpp
src/converter/: convertFormats.cpp  convertFormats.hpp
src/features/: mtxFeatures.cpp  mtxFeatures.hpp
src/formats/: bell.hpp  coo.cpp  coo.hpp  csc.hpp  csr.hpp
src/reader/: mtxReader.hpp
tests/: CMakeLists.txt  testBell.cpp  testCoo.cpp
